--- a/index.html
+++ b/index.html
@@ -7,27 +7,25 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<header>  
-    <div class="top">
-        <div id="name">Jessica Sewell</div>
-        <div id="contact"> Contact </div>
-        <div id="portfolio"> Portfolio
+
+<body>
+    <header>  
+        <div class="top">
+            <div id="name">Jessica Sewell</div>
+            <div id="contact"> Contact </div>
+            <div id="portfolio"> Portfolio
+            </div>
+            <div id ="about"> About me </div>
         </div>
-        <div id ="about"> About me </div>
-    </div>
-</header>
-
-<div class="aboutme">
-    <body>
+    </header>
         <!-- <a href="https://www.toptal.com/designers/subtlepatterns/patterns/memphis-mini.png"></a> -->
-        <h1>About Me</h1>
-        <img src= "assets/images/our-very-own-willie-silly.jpg">
-        <p>Gingerbread pie donut croissant sweet roll cake ice cream muffin apple pie. Macaroon powder jelly-o tootsie roll. Donut gummi bears sugar plum chupa chups dessert. Oat cake donut cookie cake jelly lollipop tootsie roll liquorice chupa chups. Pudding bonbon sweet. Fruitcake cake tootsie roll wafer jujubes. Chocolate cake jelly beans bear claw sweet soufflé. Icing muffin chupa chups tiramisu oat cake sugar plum. Jelly liquorice candy jelly beans. Tootsie roll pudding topping. Cake dessert tiramisu cake. Candy canes tiramisu soufflé. Cupcake dragée gummies pudding candy. Dessert tiramisu apple pie fruitcake gummi bears. </p>
-        <p>
-        Wafer oat cake chocolate cake powder pie muffin sesame snaps bear claw fruitcake. Donut cheesecake gummies. Candy jelly-o gummies cake marshmallow gummies. Soufflé halvah tootsie roll marshmallow dragée tart cheesecake. Jelly beans powder tart sweet sesame snaps gummies. Oat cake liquorice dessert marshmallow candy. Biscuit topping gingerbread danish soufflé lemon drops sweet roll. Fruitcake lollipop gummi bears. Chocolate bar sweet roll caramels brownie tart oat cake toffee jelly beans. Cheesecake danish wafer jelly beans. Cake pastry dessert. Marshmallow tiramisu brownie candy canes tootsie roll tiramisu cheesecake chocolate bar. Toffee jelly lemon drops lollipop marshmallow marshmallow. Carrot cake sweet roll liquorice marzipan jelly-o dessert lemon drops dessert.</p>
-    </body>
-</div>
+    <h1 class="aboutme">About Me</h1>
+    <img src= "assets/images/our-very-own-willie-silly.jpg">
+    <p>Gingerbread pie donut croissant sweet roll cake ice cream muffin apple pie. Macaroon powder jelly-o tootsie roll. Donut gummi bears sugar plum chupa chups dessert. Oat cake donut cookie cake jelly lollipop tootsie roll liquorice chupa chups. Pudding bonbon sweet. Fruitcake cake tootsie roll wafer jujubes. Chocolate cake jelly beans bear claw sweet soufflé. Icing muffin chupa chups tiramisu oat cake sugar plum. Jelly liquorice candy jelly beans. Tootsie roll pudding topping. Cake dessert tiramisu cake. Candy canes tiramisu soufflé. Cupcake dragée gummies pudding candy. Dessert tiramisu apple pie fruitcake gummi bears. </p>
+    <p>
+    Wafer oat cake chocolate cake powder pie muffin sesame snaps bear claw fruitcake. Donut cheesecake gummies. Candy jelly-o gummies cake marshmallow gummies. Soufflé halvah tootsie roll marshmallow dragée tart cheesecake. Jelly beans powder tart sweet sesame snaps gummies. Oat cake liquorice dessert marshmallow candy. Biscuit topping gingerbread danish soufflé lemon drops sweet roll. Fruitcake lollipop gummi bears. Chocolate bar sweet roll caramels brownie tart oat cake toffee jelly beans. Cheesecake danish wafer jelly beans. Cake pastry dessert. Marshmallow tiramisu brownie candy canes tootsie roll tiramisu cheesecake chocolate bar. Toffee jelly lemon drops lollipop marshmallow marshmallow. Carrot cake sweet roll liquorice marzipan jelly-o dessert lemon drops dessert.</p>
+    <footer></footer>
 
-<footer></footer>
+</body>
 
 </html>
