fixes to contact and portfolio

--- a/index.html
+++ b/index.html
@@ -1,31 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Jessica Sewell Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>About | Jessica Sewell </title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-
 <body>
-    <header>  
-        <div class="top">
-            <div id="name">Jessica Sewell</div>
-            <div id="contact"> Contact </div>
-            <div id="portfolio"> Portfolio
-            </div>
-            <div id ="about"> About me </div>
-        </div>
-    </header>
-        <!-- <a href="https://www.toptal.com/designers/subtlepatterns/patterns/memphis-mini.png"></a> -->
-    <h1 class="aboutme">About Me</h1>
-    <img src= "assets/images/our-very-own-willie-silly.jpg">
-    <p>Gingerbread pie donut croissant sweet roll cake ice cream muffin apple pie. Macaroon powder jelly-o tootsie roll. Donut gummi bears sugar plum chupa chups dessert. Oat cake donut cookie cake jelly lollipop tootsie roll liquorice chupa chups. Pudding bonbon sweet. Fruitcake cake tootsie roll wafer jujubes. Chocolate cake jelly beans bear claw sweet soufflé. Icing muffin chupa chups tiramisu oat cake sugar plum. Jelly liquorice candy jelly beans. Tootsie roll pudding topping. Cake dessert tiramisu cake. Candy canes tiramisu soufflé. Cupcake dragée gummies pudding candy. Dessert tiramisu apple pie fruitcake gummi bears. </p>
-    <p>
-    Wafer oat cake chocolate cake powder pie muffin sesame snaps bear claw fruitcake. Donut cheesecake gummies. Candy jelly-o gummies cake marshmallow gummies. Soufflé halvah tootsie roll marshmallow dragée tart cheesecake. Jelly beans powder tart sweet sesame snaps gummies. Oat cake liquorice dessert marshmallow candy. Biscuit topping gingerbread danish soufflé lemon drops sweet roll. Fruitcake lollipop gummi bears. Chocolate bar sweet roll caramels brownie tart oat cake toffee jelly beans. Cheesecake danish wafer jelly beans. Cake pastry dessert. Marshmallow tiramisu brownie candy canes tootsie roll tiramisu cheesecake chocolate bar. Toffee jelly lemon drops lollipop marshmallow marshmallow. Carrot cake sweet roll liquorice marzipan jelly-o dessert lemon drops dessert.</p>
-    <footer></footer>
 
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo"> Jessica Sewell </a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/IMG_9788.JPG" class="auth-image" alt="Your Name">
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+
+      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+
+      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
 </body>
 
-</html>
