Add to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/our-very-own-willie-silly.jpg" alt="Donkey Trivia">
+        <a href= "https://jessicadsewell.github.io/Giphy/" target="_blank"><img src="assets/images/Giphy.png" alt="Giphy Search"></a>
 
-        <h3>Donkey Trivia</h3>
+        <h3>Emotion Giphy Search</h3>
       </div>
       <div class= "work">
         <img src="assets/images/IMG_0189.jpg" alt="Recipe Site">
