Add of Train Scheduler to Porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,9 @@
         <h3>Emotion Giphy Search</h3>
       </div>
       <div class= "work">
-        <img src="assets/images/IMG_0189.jpg" alt="Recipe Site">
+        <a href="https://jessicadsewell.github.io/Train_Scheduler/" target="_blank"><img src="assets/images/Train_Scheduler.png" alt="Train Scheduler"></a> 
 
-        <h3>Recipe Site</h3>
+        <h3>Train Scheduler</h3>
       </div>
 
     </section>
