--- a/contact.html
+++ b/contact.html
@@ -23,25 +23,11 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Contact</h1>
-
-      <form id="contact-form">
-        <ul>
-          <li>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-          </li>
-          <li>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-          </li>
-          <li>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required="required"></textarea>
-          </li>
-        </ul>
-        <input type="submit">
-      </form>
-
+      <p>
+        <h4> Jessica Sewell </h4>
+        <h5> Email: jessicadawnsewell@gmail.com</h5>
+        <h5> Cell: 303-396-9772</h5>
+      </p>
     </section>
 
   </div>
