addition of linkedin and resume

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,9 @@
         <h5> Email: jessicadawnsewell@gmail.com</h5>
         <h5> Cell: 303-396-9772</h5>
       </p>
+        <div class="work">
+          <a href="https://www.linkedin.com/in/jessica-sewell-8a135b185/" target="_blank"><img src="assets/images/linkedinimg.png" alt="LinkedIn Link"></a>
+        </div>
     </section>
 
   </div>
