--- a/portfolio.html
+++ b/portfolio.html
@@ -25,21 +25,30 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <a href= "https://jessicadsewell.github.io/Giphy/" href="https://github.com/jessicadsewell/Giphy" target="_blank"><img src="assets/images/Giphy.png" alt="Giphy Search"></a>
+        <a href="https://jessicadsewell.github.io/Giphy/" target="_blank"><img src="assets/images/Giphy.png"
+            alt="Giphy Search"></a>
 
         <h3>Emotion Giphy Search</h3>
       </div>
-      <div class= "work">
-        <a href="https://jessicadsewell.github.io/Train_Scheduler/" target="_blank"><img src="assets/images/Train_Scheduler.png" alt="Train Scheduler"></a> 
+      <div class="work">
+        <a href="https://jessicadsewell.github.io/Train_Scheduler/" target="_blank"><img
+            src="assets/images/Train_Scheduler.png" alt="Train Scheduler"></a>
 
         <h3>Train Scheduler</h3>
       </div>
-      <div class= "work">
-        <a href="https://robert1kowalski.github.io/Project-1/" target="_blank"><img src="assets/images/Dog_Date.png" alt="Dog Date Website"></a> 
+      <div class="work">
+        <a href="https://robert1kowalski.github.io/Project-1/" target="_blank"><img src="assets/images/Dog_Date.png"
+            alt="Dog Date Website"></a>
 
         <h3>Doggie Date</h3>
       </div>
-
+      <br><br><br><br>
+      <div id="resume">
+        <!-- <a href="file:///Users/jessicasewell/Desktop/code/homework/Basic-Portfolio/assets/images/jsewell.pdf" target="blank"><img src="assets/images/jsewell.pdf"></a> -->
+        <iframe src="assets/images/jsewell.pdf" width="400" height="500">
+        </iframe>
+      </div>
+      
     </section>
 
   </div>
