--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
       <img src="assets/images/IMG_9788.JPG" class="auth-image" alt="Your Name">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
+      <p> My name is Jessica Sewell and I am Full Stack Web Development student with a background in Management and Nutrition.</p>
 
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
+      <p> I've worn a lot of hats that have provided me a variety of problems to solve, people to work with and solutions to create. </p>
 
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <p> Through web development, I've found a love for creating and fine-tuning to allow a product or business to thrive. The reward of building and improving as a team continues to motivate and excite me. 
+      
+      <p> I'm looking to work with and for likeminded people who also want to provide a great user experience all while having fun and remaining personable.</p> 
 
     </section>
 
