Link to resume fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,17 +42,15 @@
 
         <h3>Doggie Date</h3>
       </div>
-      <br><br><br><br>
-      <div id="resume">
-        <!-- <a href="file:///Users/jessicasewell/Desktop/code/homework/Basic-Portfolio/assets/images/jsewell.pdf" target="blank"><img src="assets/images/jsewell.pdf"></a> -->
-        <iframe src="assets/images/jsewell.pdf" width="400" height="500">
-        </iframe>
+      <div class="work">
+        <a href="file:///Users/jessicasewell/Desktop/code/homework/Basic-Portfolio/assets/images/jsewell.pdf" target="_blank"><img src="assets/images/resume.png"></a>
+        <!-- <iframe src="assets/images/jsewell.pdf" width="400" height="500">
+        </iframe> -->
+        <h3>Resume</h3>
       </div>
-      
     </section>
-
   </div>
-
+    
   <footer>
     <div class="container">
       Copyright &copy;
