changes to resume

--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Jessica Sewell</a>
+      <a href="index.html" id="logo"> JESSICA SEWELL </a>
       <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html">ABOUT</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="contact.html">CONTACT</a>
       </nav>
     </div>
   </header>
@@ -36,9 +36,7 @@
   </div>
 
   <footer>
-    <div class="container">
-      Copyright &copy; 
-    </div>
+
   </footer>
 </body>
 
