--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <meta charset="UTF-8">
   <title>About | Jessica Sewell </title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo"> Jessica Sewell </a>
+      <a href="index.html" id="logo"> JESSICA SEWELL </a>
       <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html">ABOUT</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="contact.html">CONTACT</a>
       </nav>
     </div>
   </header>
@@ -39,9 +40,6 @@
   </div>
 
   <footer>
-    <div class="container">
-      Copyright &copy; 
-    </div>
   </footer>
 </body>
 
