--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,11 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Jessica Sewell</a>
+      <a href="index.html" id="logo"> JESSICA SEWELL </a>
       <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html">ABOUT</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="contact.html">CONTACT</a>
       </nav>
     </div>
   </header>
@@ -43,7 +43,7 @@
         <h3>Doggie Date</h3>
       </div>
       <div class="work">
-        <a href="file:///Users/jessicasewell/Desktop/code/homework/Basic-Portfolio/assets/images/jsewell.pdf" target="_blank"><img src="assets/images/resume.png"></a>
+        <a href="file:///Users/jessicasewell/Desktop/J%20Sewell%20Resume.pdf" target="_blank"><img src="assets/images/resume.png"></a>
         <!-- <iframe src="assets/images/jsewell.pdf" width="400" height="500">
         </iframe> -->
         <h3>Resume</h3>
@@ -52,9 +52,6 @@
   </div>
     
   <footer>
-    <div class="container">
-      Copyright &copy;
-    </div>
   </footer>
 </body>
 
