Addition of liri to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,13 @@
         <h3>Doggie Date</h3>
       </div>
       <div class="work">
+        <a href="https://github.com/jessicadsewell/liri-node-app/blob/master/README.md" target="_blank"><img src="assets/images/concertscreenshot.png"
+            alt="Liri Node App"></a>
+
+        <h3>LIRI Node App</h3>
+      </div>
+      <div class="work">
         <a href="file:///Users/jessicasewell/Desktop/J%20Sewell%20Resume.pdf" target="_blank"><img src="assets/images/resume.png"></a>
-        <!-- <iframe src="assets/images/jsewell.pdf" width="400" height="500">
-        </iframe> -->
         <h3>Resume</h3>
       </div>
     </section>
