background image fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Portfolio | Jessica Sewell</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
