addition of bamazon app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,12 @@
         <h3>LIRI Node App</h3>
       </div>
       <div class="work">
+        <a href="https://github.com/jessicadsewell/bamazon/blob/master/README.md" target="_blank"><img src="assets/images/bamazonscreenshot.png"
+            alt="Liri Node App"></a>
+
+        <h3>Bamazon App</h3>
+      </div>
+      <div class="work">
         <a href="file:///Users/jessicasewell/Desktop/J%20Sewell%20Resume.pdf" target="_blank"><img src="assets/images/resume.png"></a>
         <h3>Resume</h3>
       </div>
