add of FriendFinder to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,12 @@
         <h3>Bamazon App</h3>
       </div>
       <div class="work">
+        <a href="https://polar-fjord-68282.herokuapp.com/" target="_blank"><img src="assets/images/Friend Finder.png"
+            alt="Friend Finder"></a>
+
+        <h3>Friend Finder</h3>
+      </div>
+      <div class="work">
         <a href="file:///Users/jessicasewell/Desktop/J%20Sewell%20Resume.pdf" target="_blank"><img src="assets/images/resume.png"></a>
         <h3>Resume</h3>
       </div>
