addition of eatdaburger to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,10 @@
         <h3>Friend Finder</h3>
       </div>
       <div class="work">
+        <a href="https://protected-hamlet-76362.herokuapp.com/" target="_blank"><img src="assets/images/eatdaburger.png"></a>
+        <h3>Eat-Da-Burger</h3>
+      </div>
+      <div class="work">
         <a href="file:///Users/jessicasewell/Desktop/J%20Sewell%20Resume.pdf" target="_blank"><img src="assets/images/resume.png"></a>
         <h3>Resume</h3>
       </div>
