--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,10 @@
         <h3>Eat-Da-Burger</h3>
       </div>
       <div class="work">
+        <a href="https://project2-pupper.herokuapp.com/" target="_blank"><img src="assets/images/pupper.png"></a>
+        <h3>Pupper</h3>
+      </div>
+      <div class="work">
         <a href="file:///Users/jessicasewell/Desktop/J%20Sewell%20Resume.pdf" target="_blank"><img src="assets/images/resume.png"></a>
         <h3>Resume</h3>
       </div>
