add of news scraper to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,10 @@
         <h3>Pupper</h3>
       </div>
       <div class="work">
+        <a href="https://whispering-inlet-35964.herokuapp.com/" target="_blank"><img src="assets/images/newsscraper.png"></a>
+        <h3>News Scraper</h3>
+      </div>
+      <div class="work">
         <a href="file:///Users/jessicasewell/Desktop/J%20Sewell%20Resume.pdf" target="_blank"><img src="assets/images/resume.png"></a>
         <h3>Resume</h3>
       </div>
