--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,10 @@
         <h3>News Scraper</h3>
       </div>
       <div class="work">
+        <a href="https://guarded-escarpment-41457.herokuapp.com/" target="_blank"><img src="assets/images/puppermatches.png"></a>
+        <h3>Pupper 2.0</h3>
+      </div>
+      <div class="work">
         <a href="file:///Users/jessicasewell/Desktop/J%20Sewell%20Resume.pdf" target="_blank"><img src="assets/images/resume.png"></a>
         <h3>Resume</h3>
       </div>
